//
// Created by Pierre Roussel on 4/17/23.
//

#ifndef LO21_PROJECT_HAND_H
#define LO21_PROJECT_HAND_H

#include <vector>
#include "Card.h"

class Hand {
private:
  std::vector<Card> cards;
public:
};


#endif //LO21_PROJECT_HAND_H
