/***
* LO21: Shotten-Totten Project
* @author: Roussel Pierre
* @author: Santamaria Gabriel
* @licence: TODO
*/

#ifndef LO21_PROJECT_ROUND_H
#define LO21_PROJECT_ROUND_H

#include <string>

#include "Turns.h"

class Round {
private:
  unsigned int id;
  std::string winner;
  Turns turns;

public:
};

#endif//LO21_PROJECT_ROUND_H
