/***
* LO21: Shotten-Totten Project
* @author: Roussel Pierre
* @author: Santamaria Gabriel
* @licence: TODO
*/

#ifndef LO21_PROJECT_TACTICCARD_H
#define LO21_PROJECT_TACTICCARD_H

#include "Card.h"

class TacticCard : public Card {
};

#endif//LO21_PROJECT_TACTICCARD_H
