//
// Created by Pierre Roussel on 4/17/23.
//

#ifndef LO21_PROJECT_TURNS_H
#define LO21_PROJECT_TURNS_H

#include <string>
#include "../Constants/Constants.h"

class Turns {
private:
  unsigned int id;
  std::string voiceTo;
  Phase phase;
public:
};


#endif //LO21_PROJECT_TURNS_H
