/***
* LO21: Shotten-Totten Project
* @author: Roussel Pierre
* @author: Santamaria Gabriel
* @licence: TODO
*/

#ifndef LO21_PROJECT_WALL_H
#define LO21_PROJECT_WALL_H

class Wall {
protected:
  bool isDamaged;
};

#endif//LO21_PROJECT_WALL_H
